# umkmall_analytics

./: .env.example  .gitignore  Dockerfile  Dockerfile.lightdash  README.md  docker-compose.yml  main.py  pyproject.toml  railway.json  test_eduqat_pagination.py
dbt/: dbt_project.yml  profiles.yml
dbt/analyses/: .gitkeep
dbt/macros/: .gitkeep  normalize_business_age.sql  normalize_email.sql  normalize_employee_count.sql  normalize_income.sql  normalize_phone_number.sql
dbt/models/: sources.yml
dbt/models/marts/: mart_all_data_by_contact.sql  mart_contact.sql  mart_enrollment.sql  (+5 more)
dbt/seeds/: .gitkeep
dbt/snapshots/: .gitkeep
dbt/tests/: .gitkeep
ingestion/: __init__.py  main.py
ingestion/lib/: __init__.py  column_mappings.py  data_cleaning.py  eduqat_client.py  eduqat_models.py  gsheets_client.py
ingestion/sources/: __init__.py  ai_chat_messages.py  ai_chat_sessions.py  branding_level_up.py  eduqat_ai_conversations.py  eduqat_courses.py  eduqat_enrollments.py  eduqat_survey_results.py  eduqat_users.py  example_source.py  leads_ads_community.py  leads_course_strategi_ads.py  purchase_form_data.py  users.py  website_form_responses.py
ingestion/utils/: __init__.py  db.py
lightdash/: Dockerfile  README.md  docker-compose.yml
old_pipeline/: .env.example  .gitignore  README.md  check_env.py  main.py  pyproject.toml  test_source.py
old_pipeline/src/: __init__.py  postgres_client.py
old_pipeline/src/config/: layers.py  sources.py
old_pipeline/src/transforms/: __init__.py  intermediate.py  marts.py  metadata.py  staging.py
railway/: README.md
(+17 files in other folders)
